replaced apply with loop to reason better about memory usage

--- a/phylogenize-report.Rmd
+++ b/phylogenize-report.Rmd
@@ -482,6 +482,7 @@ if (params$ncl > 1) {
 		gene.presence[names(taxa)],
 		trees[names(taxa)],
 		taxa,
+		as.list(names(taxa)),
 		MoreArgs=list(pheno=phenotype))
 }
 
