--- a/package/phylogenize/inst/rmd/phylogenize-report.Rmd
+++ b/package/phylogenize/inst/rmd/phylogenize-report.Rmd
@@ -31,7 +31,7 @@ params:
   skip_graphs: FALSE
   vsearch_dir: "./bin"
   linearize: FALSE
-  pryr: TRUE
+  check_mem_usage: TRUE
   use_rmd_params: TRUE
   error_to_file: TRUE
 ---
@@ -54,8 +54,8 @@ if (is.null(pz.options('relative_out_dir'))) {
   pz.options(relative_out_dir=pz.options('out_dir'))
 }
 
-check.pryr <- function() {
-    if (pz.options('pryr')) message(pryr::mem_used() / 1e6)
+check.mem_usage <- function(x) {
+	if (pz.options('check_mem_usage')) message(lobstr::cst(obj_size(x)))
 }
 
 # Note that params give defaults for the web tool, while PZ_OPTIONS gives
@@ -85,9 +85,9 @@ if (!pz.options('skip_graphs')) {
     })
 }
 
-# Only load pryr to track memory usage if debugging
-if (pz.options('pryr')) { library(pryr) }
-if (pz.options('pryr')) message(pryr::mem_used() / 1e6)
+# Only load lobstr to track memory usage if debugging
+if (pz.options('check_mem_usage')) { library(lobstr) }
+if (pz.options('check_mem_usage')) message(lobstr::mem_used() / 1e6)
 
 dir.create(pz.options('out_dir'))
 
@@ -104,7 +104,7 @@ if (pz.options('assume_below_LOD')) {
 
 # Make back into a binary sparse matrix to save memory
 gc()
-check.pryr()
+check.mem_usage()
 pz.message("Starting evaluation...")
 
 ```
@@ -186,7 +186,7 @@ write.table(file=file.path(pz.options('out_dir'), "phenotype.tab"),
 
 # be a little parsimonious with memory here
 rm(abd.meta); gc()
-check.pryr()
+check.mem_usage()
 ```
 
 # Phenotype mapped across trees {.tabset}
@@ -201,7 +201,7 @@ if (!pz.options('skip_graphs')) {
                                  label=pz.options('which_phenotype'))
 }
 
-check.pryr()
+check.mem_usage()
 ```
 
 ## Only mapped/observed taxa {.tabset}
@@ -241,7 +241,7 @@ if (!pz.options('skip_graphs')) {
   }
 }
 
-check.pryr()
+check.mem_usage()
 ```
 
 `r rmd.message`
@@ -303,7 +303,7 @@ rm(pos.sig.thresh.descs)
 write.csv(file = file.path(pz.options('out_dir'), "all-results.csv"),
           results.matrix)
 rm(results.matrix)
-check.pryr()
+check.mem_usage()
 ```
 
 # Gene association heat maps
@@ -319,7 +319,7 @@ have particularly extreme phenotypes.
 ```{r gene_assoc_heat_maps, warning = FALSE, message = FALSE, echo=FALSE, results="hide", dev = "png", dpi = 300, cache=TRUE}
 
 
-check.pryr()
+check.mem_usage()
 
 cluster.plots <- mapply(do.clust.plot, 
                         pz.db$gene.presence[phy.with.sigs],
@@ -331,7 +331,7 @@ cluster.plots <- mapply(do.clust.plot,
 
 rm(cluster.plots)
 rm(plotted.pheno.trees)
-check.pryr()
+check.mem_usage()
 
 ```
 
@@ -374,9 +374,9 @@ if (!is.null(enrichment.tbl)) {
             Subsystem_level,
             desc(Enrichment_odds_ratio))
 
-  check.pryr()
+  check.mem_usage()
   write.csv(file=file.path(pz.options('out_dir'), "enr-table.csv"), pretty.enr.tbl)
-  check.pryr()
+  check.mem_usage()
 }
 
 ```
@@ -384,10 +384,10 @@ Enrichment tables:
 
 ```{r enrichment_display, echo=FALSE, results='asis'}
 options(knitr.table.format = "html")
-check.pryr()
+check.mem_usage()
 if (!is.null(pretty.enr.tbl)) {
   cat(output.enr.table(pretty.enr.tbl))
-  check.pryr()
+  check.mem_usage()
   if (nrow(enrichment.tbl) > 0) {
     enr.overlap <- select(enrichment.tbl,
                           phylum,
@@ -402,7 +402,7 @@ if (!is.null(pretty.enr.tbl)) {
                    mutate(effectsize=map2_dbl(phylum,
                                               gene,
                                               ~results[[.x]][1, .y]))
-    check.pryr()
+    check.mem_usage()
     write.csv(file=file.path(pz.options('out_dir'),
                              "enr-overlaps.csv"),
               enr.overlap)
@@ -414,7 +414,7 @@ if (!is.null(pretty.enr.tbl)) {
                       termset,
                       term,
                       desc(effectsize)))
-    check.pryr()
+    check.mem_usage()
     rm(enr.overlap)
     rm(enrichments)
   }
