added continuous option for diff abundance; added abundance code in report notebook; added code to provide your own phenotype (either with or without shrinkage)

--- a/package/phylogenize/inst/rmd/phylogenize-report.Rmd
+++ b/package/phylogenize/inst/rmd/phylogenize-report.Rmd
@@ -155,7 +155,23 @@ if (pz.options('which_phenotype') == "prevalence") {
   phenotype <- correl.clr(abd.meta)
   phenoP <- 0
 } else if (pz.options("which_phenotype") == "provided") {
-  pz.error("providing your own phenotype not implemented yet")
+  p_tbl <- read_tsv(pz.options("phenotype_file"))
+  if (ncol(p_tbl) == 2) { # assume we only have species IDs and values
+    phenotype <- deframe(p_tbl)
+  } else { # perform shrinkage on the provided values w/ their stderrs
+    p_est <- as.numeric(p_tbl[["estimate"]])
+    p_se <- as.numeric(p_tbl[["stderr"]])
+    names(p_est) <- p_tbl[[1]]
+    names(p_se) <- p_tbl[[1]]
+    ashr_res <- ashr_wrapper(p_est, p_se)
+    phenotype <- ashr_res$result %>%
+      as_tibble(rownames="species") %>%
+      dplyr::select(species, PosteriorMean) %>%
+      deframe
+  }
+} else if (pz.options("which_phenotype") == "abundance") {
+  phenotype <- ashr.diff.abund(abd.meta)
+  phenoP <- NULL
 } else {
   pz.error(paste0("don't know how to calculate the phenotype ",
                   pz.options('which_phenotype')))
